# NoctiForge

./: 2  Cargo.toml  README.md  TODO.md  flake.nix  justfile  rust-toolchain.toml
examples/custom/: Cargo.toml  Nocti.toml
examples/custom/src/: main.rs
examples/echo/: Cargo.toml  Nocti.toml
examples/echo/src/: main.rs
libs/proto/: build.rs
libs/proto/api/: registry.proto  worker.proto
libs/proto/src/: lib.rs
libs/sdk/: Cargo.toml
libs/sdk/src/: lib.rs
scripts/: setup.sh
services/cli/: Cargo.toml
services/cli/src/: command.rs
services/cli/src/command/: trigger.rs
services/cli/src/command/push/: custom.rs  mod.rs  rust.rs
services/cli/src/command/run/: custom.rs  mod.rs
services/controlplane/src/services/: digest_service.rs
services/registry/: Cargo.toml
services/registry/src/: main.rs  registry.rs
services/worker/: Cargo.toml
services/worker/src/: background.rs  config.rs  main.rs  path.rs  server.rs  worker.rs
services/worker/src/client/: controlplane_client.rs  registry_clint.rs
services/worker/src/server/: mod.rs
services/worker/src/worker/: container.rs  docker.rs  function_invocations.rs  mod.rs  organizer.rs  spec.rs  worker.rs
