[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "noctiForge"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1" }
async-stream = "0"
async-trait = "0"
async_zip = { features = ["deflate", "tokio"], version = "0" }
clap = { version = "4", features = ["derive"] }
proto = { path = "../../libs/proto" }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "fs", "rt-multi-thread", "process"] }
tokio-tar = "0"
tokio-util = { features = ["compat"], version = "0" }
toml = "0"
tonic = "0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
