[package]
name = "registry"
version = "0.1.0"
edition = "2024"

[dependencies]
proto = { path = "../../libs/proto" }
sha2 = { version = "0.10" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
tokio-stream = { features = ["io-util"], version = "0" }
tokio-tar = "0"
tonic = "0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
